remove resource description from documentation and replace with schema (fixes #42); add schema endpoint
